feat(eo-lowering): #8548 enter fragments through applied markers
A run of phino now morphs each binding of a fragment on its own,
entered from Φ through copies of the enclosing formations applied to
markers of fresh symbols, since phino 0.0.128 fires the λ of a boxed
formation asked to morph whole. Applied, Route, Sites, Stamp and
Carrier replace Slot and Symbolized on the way from a marker to the
atom that stands in its place, and the class name of an atom nested
deep in a document is capped so that it still fits a file name.

The const-helper and const-number packs lower once the test fixture
registers prelude members under dotted identifiers, so that MjMerge
folds them into their package object as a real build does. The
applied-helper pack waits on objectionary/phino#1196, and a puzzle
covers a const handle that is the whole answer of its body.